--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -114,6 +114,12 @@
     <Compile Update="Pattern\Cross\CrossEditor.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Pattern\SFR\SFREditor.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pattern\Ring\SFREditor.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Pattern\Stripe\DotEditor.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
