--- a/Plugins/WindowsServicePlugin/WindowsServicePlugin.csproj
+++ b/Plugins/WindowsServicePlugin/WindowsServicePlugin.csproj
@@ -4,7 +4,8 @@
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 		<ImplicitUsings>enable</ImplicitUsings>    
-		<VersionPrefix>1.3.1.5</VersionPrefix>
+		<VersionPrefix>1.3.1.6</VersionPrefix>    
+		<OutputType>WinExe</OutputType>
 	</PropertyGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
