--- a/Plugins/WindowsServicePlugin/manifest.json
+++ b/Plugins/WindowsServicePlugin/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
   "Id": "WindowsServicePlugin",
-  "name": "视彩服务插件",
+  "name": "\u89c6\u5f69\u670d\u52a1\u63d2\u4ef6",
   "version": "1.0",
-  "description": "增强的服务管理工具，提供服务日志、服务更新，一起一些其他和服务相关的功能",
+  "description": "\u589e\u5f3a\u7684\u670d\u52a1\u7ba1\u7406\u5de5\u5177\uff0c\u63d0\u4f9b\u670d\u52a1\u65e5\u5fd7\u3001\u670d\u52a1\u66f4\u65b0\uff0c\u4e00\u8d77\u4e00\u4e9b\u5176\u4ed6\u548c\u670d\u52a1\u76f8\u5173\u7684\u529f\u80fd",
   "dllpath": "WindowsServicePlugin.dll",
-  "requires": "1.2.4.22"
-} 
+  "requires": "1.3.7.2"
+}
