--- a/UI/ColorVision.SocketProtocol/ColorVision.SocketProtocol.csproj
+++ b/UI/ColorVision.SocketProtocol/ColorVision.SocketProtocol.csproj
@@ -18,7 +18,12 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
+		<ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
+
 
 </Project>
