--- a/.github/workflows/github_workflows_auto-pr.yml
+++ b/.github/workflows/github_workflows_auto-pr.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           base: master
           branch: develop
           title: 'Auto PR: Sync develop to master'
