--- a/Engine/cvColorVision/cvColorVision.csproj
+++ b/Engine/cvColorVision/cvColorVision.csproj
@@ -101,17 +101,17 @@
 		<None Include="libusb0.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>runtimes/win-x64/nativeassets</PackagePath>
+			<PackagePath>runtimes/win-x64/lib</PackagePath>
 		</None>
 		<None Include="SpectraArsenal.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>runtimes/win-x64/nativeassets</PackagePath>
+			<PackagePath>runtimes/win-x64/lib</PackagePath>
 		</None>
 		<None Include="USB_Driver.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>runtimes/win-x64/nativeassets</PackagePath>
+			<PackagePath>runtimes/win-x64/lib</PackagePath>
 		</None>
 	</ItemGroup>
 
