--- a/UI/ColorVision.Solution/ColorVision.Solution.csproj
+++ b/UI/ColorVision.Solution/ColorVision.Solution.csproj
@@ -59,8 +59,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="README.md">
-			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		<None Include="README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
