--- a/Plugins/EventVWR/manifest.json
+++ b/Plugins/EventVWR/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
   "Id": "EventVWR",
-  "name": "事件插件",
+  "name": "\u4e8b\u4ef6\u63d2\u4ef6",
   "version": "1.0",
-  "description": "增强的异常管理,提供事件插件和Dump设置",
+  "description": "\u589e\u5f3a\u7684\u5f02\u5e38\u7ba1\u7406,\u63d0\u4f9b\u4e8b\u4ef6\u63d2\u4ef6\u548cDump\u8bbe\u7f6e",
   "dllpath": "EventVWR.dll",
-  "requires": "1.0.0.1"
-} 
+  "requires": "1.3.8.10"
+}
