--- a/Plugins/SystemMonitor/manifest.json
+++ b/Plugins/SystemMonitor/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
   "Id": "SystemMonitor",
-  "name": "性能监控",
+  "name": "\u6027\u80fd\u76d1\u63a7",
   "version": "1.0",
-  "description": "增强的电脑性能监控插件",
+  "description": "\u589e\u5f3a\u7684\u7535\u8111\u6027\u80fd\u76d1\u63a7\u63d2\u4ef6",
   "dllpath": "SystemMonitor.dll",
-  "requires": "1.0.0.0"
-} 
+  "requires": "1.3.8.10"
+}
