--- a/UI/ColorVision.UI/ColorVision.UI.csproj
+++ b/UI/ColorVision.UI/ColorVision.UI.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<VersionPrefix>1.3.5.1</VersionPrefix>
+		<VersionPrefix>1.3.5.2</VersionPrefix>
 		<TargetFrameworks>net8.0-windows;net6.0-windows</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
@@ -52,8 +52,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="Assets\css\github-markdown.css">
+	  <None Include="Assets\css\github-markdown.css">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		 <Pack>true</Pack>
 	  </None>
 	</ItemGroup>
 
