--- a/ColorVision/log4net.config
+++ b/ColorVision/log4net.config
@@ -16,7 +16,7 @@
 			<staticLogFileName value="false" />
 			<param name="MaxSizeRollBackups" value="1000" />
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date % %-5level %logger - %message%newline"/>
+				<conversionPattern value="%date % [%thread] %-5level %logger - %message%newline"/>
 			</layout>
 		</appender>
 		<appender name="ConsoleAppender"  type="log4net.Appender.ConsoleAppender" >
