--- a/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
+++ b/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
@@ -88,6 +88,7 @@
 		<ProjectReference Include="..\ColorVision.Common\ColorVision.Common.csproj" />
 		<ProjectReference Include="..\ColorVision.Core\ColorVision.Core.csproj" />
 		<ProjectReference Include="..\ColorVision.Themes\ColorVision.Themes.csproj" />
+		<ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
