--- a/Projects/ProjectLUX/manifest.json
+++ b/Projects/ProjectLUX/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
-  "Id": "ProjectARVR",
-  "name": "ProjectARVR",
+  "Id": "ProjectLUX",
+  "name": "ProjectLUX",
   "version": "1.0",
   "description": "",
-  "dllpath": "ProjectARVR.dll",
+  "dllpath": "ProjectLUX.dll",
   "requires": "1.3.9.10"
 }
