--- a/Engine/FlowEngineLib/FlowEngineLib.csproj
+++ b/Engine/FlowEngineLib/FlowEngineLib.csproj
@@ -5,14 +5,28 @@
 		<UseWindowsForms>True</UseWindowsForms>
 		<LangVersion>11.0</LangVersion>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<TargetFrameworks>net8.0-windows</TargetFrameworks>
+		<TargetFrameworks>net8.0-windows;net472</TargetFrameworks>
 		<VersionPrefix>1.6.1.25091</VersionPrefix>
 	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="log4net" Version="3.2.0" />
-		<PackageReference Include="MQTTnet" Version="4.3.4.1084" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-	</ItemGroup>
+
+	  <!-- net8.0-windows 相关引用 -->
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+    <PackageReference Include="log4net" Version="3.2.0" />
+    <PackageReference Include="MQTTnet" Version="4.3.4.1084" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <ProjectReference Include="..\ST.Library.UI\ST.Library.UI.csproj" />
+  </ItemGroup>
+
+  <!-- net472 相关引用 -->
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+    <PackageReference Include="log4net" Version="3.2.0" />
+    <PackageReference Include="MQTTnet" Version="4.3.4.1084" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <ProjectReference Include="..\ST.Library.UI\ST.Library.UI.csproj" />
+  </ItemGroup>
+
+	
 	<ItemGroup>
 	  <ProjectReference Include="..\ST.Library.UI\ST.Library.UI.csproj" />
 	</ItemGroup>
