--- a/Engine/FlowEngineLib/FlowEngineLib.csproj
+++ b/Engine/FlowEngineLib/FlowEngineLib.csproj
@@ -7,6 +7,7 @@
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 		<TargetFrameworks>net8.0-windows;net472</TargetFrameworks>
 		<VersionPrefix>1.6.1.25091</VersionPrefix>
+		<NoWarn>CA1853,CA1309,CA1715,CA1716,CS0649,CS0219,CS4014,CS1717,CS850,CA1850,CA1859,CA1725,CA5351,CS1859,CS1850,CA1864,CA1854,CA1822,CA1510,CA1852,CA1310,CA1001,CA1861,CA2208,CA1805,CA1707,CA2022,CA1711,CA1051,CA2211,CA2200,CA1018,CA1010,CA1311,CA1304,CA2249,CA1806,CA1720</NoWarn>
 	</PropertyGroup>
 
 	  <!-- net8.0-windows 相关引用 -->
