--- a/Plugins/Pattern/manifest.json
+++ b/Plugins/Pattern/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
   "Id": "Pattern",
-  "name": "图卡生成工具",
+  "name": "\u56fe\u5361\u751f\u6210\u5de5\u5177",
   "version": "1.0",
-  "description": "图卡生成工具",
+  "description": "\u56fe\u5361\u751f\u6210\u5de5\u5177",
   "dllpath": "Pattern.dll",
-  "requires": "1.3.9.28"
+  "requires": "1.3.9.27"
 }
