--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -11,6 +11,25 @@
     <PackageReadmeFile></PackageReadmeFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Rbac\Account\**" />
+    <Compile Remove="Rbac\Roles\**" />
+    <Compile Remove="Rbac\Tenants\**" />
+    <Compile Remove="Rbac\Users\**" />
+    <EmbeddedResource Remove="Rbac\Account\**" />
+    <EmbeddedResource Remove="Rbac\Roles\**" />
+    <EmbeddedResource Remove="Rbac\Tenants\**" />
+    <EmbeddedResource Remove="Rbac\Users\**" />
+    <None Remove="Rbac\Account\**" />
+    <None Remove="Rbac\Roles\**" />
+    <None Remove="Rbac\Tenants\**" />
+    <None Remove="Rbac\Users\**" />
+    <Page Remove="Rbac\Account\**" />
+    <Page Remove="Rbac\Roles\**" />
+    <Page Remove="Rbac\Tenants\**" />
+    <Page Remove="Rbac\Users\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.1.66" />
 		<PackageReference Include="CsvHelper" Version="33.1.0" />
@@ -215,14 +234,6 @@
     <Page Update="Templates\Jsons\BinocularFusion\DisplayBinocularFusion.xaml">
       <SubType>Designer</SubType>
     </Page>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Rbac\Users\" />
-    <Folder Include="Rbac\Roles\" />
-    <Folder Include="Rbac\Tenants\" />
-    <Folder Include="Rbac\Account\" />
-    <Folder Include="Templates\POI\Image\" />
   </ItemGroup>
 
 </Project>
