--- a/Core/opencv_cuda/opencv_cuda.vcxproj.filters
+++ b/Core/opencv_cuda/opencv_cuda.vcxproj.filters
@@ -30,10 +30,10 @@
     <ClInclude Include="Fusion.h">
       <Filter>算法</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\cuda_export.h">
+    <ClInclude Include="..\..\include\cuda_export.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\custom_structs.h">
+    <ClInclude Include="..\..\include\custom_structs.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
