--- a/Plugins/Pattern/Pattern.csproj
+++ b/Plugins/Pattern/Pattern.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.0.21</VersionPrefix>
+		<VersionPrefix>1.0.0.22</VersionPrefix>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -56,6 +56,10 @@
 	  <None Update="manifest.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="LinePairMTF\" />
 	</ItemGroup>
 
 </Project>
