--- a/Plugins/Pattern/Pattern.csproj
+++ b/Plugins/Pattern/Pattern.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.0.22</VersionPrefix>
+		<VersionPrefix>1.0.0.23</VersionPrefix>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -38,6 +38,9 @@
 		<Compile Update="Dot\DotEditor.xaml.cs">
 			<SubType>Code</SubType>
 		</Compile>
+		<Compile Update="LinePairMTF\LinePairMTFEditor.xaml.cs">
+		  <SubType>Code</SubType>
+		</Compile>
 		<Compile Update="NineDot\NineDotEditor.xaml.cs">
 			<SubType>Code</SubType>
 		</Compile>
@@ -56,10 +59,6 @@
 	  <None Update="manifest.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="LinePairMTF\" />
 	</ItemGroup>
 
 </Project>
