--- a/Plugins/Pattern/Pattern.csproj
+++ b/Plugins/Pattern/Pattern.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.0.23</VersionPrefix>
+		<VersionPrefix>1.0.0.30</VersionPrefix>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -57,6 +57,9 @@
 
 	<ItemGroup>
 	  <None Update="manifest.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="README.md">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
