--- a/Engine/ColorVision.FileIO/ColorVision.FileIO.csproj
+++ b/Engine/ColorVision.FileIO/ColorVision.FileIO.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net8.0-windows;net6.0-windows;net48</TargetFrameworks>
+	  <TargetFrameworks>net8.0;net6.0;net48</TargetFrameworks>
 	  <VersionPrefix>1.3.5.1</VersionPrefix>
 	  <SignAssembly>True</SignAssembly>
 	  <AssemblyOriginatorKeyFile>$(SolutionDir)ColorVision.snk</AssemblyOriginatorKeyFile>
