--- a/ColorVision/ColorVision.csproj
+++ b/ColorVision/ColorVision.csproj
@@ -14,6 +14,13 @@
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Plugins\**" />
+    <EmbeddedResource Remove="Plugins\**" />
+    <None Remove="Plugins\**" />
+    <Page Remove="Plugins\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
 	</ItemGroup>
@@ -55,7 +62,6 @@
     <None Remove="Assets\Image\Paomedia-Small-N-Flat-Key.ico" />
     <None Remove="Assets\png\background0.png" />
     <None Remove="Assets\png\PowerToy.png" />
-    <None Remove="ComfyUI_00062_.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -134,13 +140,6 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\png\PowerToy.png" />
-    <Resource Include="ComfyUI_00062_.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Plugins\" />
   </ItemGroup>
 
 </Project>
