--- a/Projects/ProjectARVRPro/manifest.json
+++ b/Projects/ProjectARVRPro/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
-  "Id": "ProjectARVRLite",
-  "name": "ProjectARVRLite",
+  "Id": "ProjectARVRPro",
+  "name": "ProjectARVRPro",
   "version": "1.0",
   "description": "",
-  "dllpath": "ProjectARVRLite.dll",
-  "requires": "1.3.9.37"
+  "dllpath": "ProjectARVRPro.dll",
+  "requires": "1.3.12.19"
 }
