--- a/UI/ColorVision.Solution/ColorVision.Solution.csproj
+++ b/UI/ColorVision.Solution/ColorVision.Solution.csproj
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<VersionPrefix>1.3.8.2</VersionPrefix>
+		<VersionPrefix>1.3.8.3</VersionPrefix>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile></PackageReadmeFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -32,6 +32,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Compile Update="Editor\AvalonEditor\AvalonEditControll.xaml.cs">
+		  <SubType>Code</SubType>
+		</Compile>
 		<Compile Update="Properties1\Resources.Designer.cs">
 			<DesignTime>True</DesignTime>
 			<AutoGen>True</AutoGen>
