--- a/UI/ColorVision.Solution/ColorVision.Solution.csproj
+++ b/UI/ColorVision.Solution/ColorVision.Solution.csproj
@@ -20,6 +20,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<COMReference Include="IWshRuntimeLibrary">
+			<WrapperTool>tlbimp</WrapperTool>
+			<VersionMinor>0</VersionMinor>
+			<VersionMajor>1</VersionMajor>
+			<Guid>f935dc20-1cf0-11d0-adb9-00c04fd58a0b</Guid>
+			<Lcid>0</Lcid>
+			<Isolated>false</Isolated>
+			<EmbedInteropTypes>true</EmbedInteropTypes>
+		</COMReference>
+		<PackageReference Include="Markdig.Signed" Version="0.42.0" />
+		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3485.44" />
 		<PackageReference Include="AvalonEdit" Version="6.3.1.120" />
 		<PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.72.1" />
 		<PackageReference Include="WPFHexaEditor" Version="2.1.7" />
@@ -59,15 +70,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Assets\" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<None Include="README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
-
+	<ItemGroup>
+		<None Include="Assets\css\github-markdown.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Pack>true</Pack>
+		</None>
+	</ItemGroup>
 
 </Project>
