--- a/ColorVision/Properties/launchSettings.json
+++ b/ColorVision/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "ColorVision": {
       "commandName": "Project",
       "commandLineArgs": "-i \"C:\\Users\\Xin\\Documents\\ColorVision\\默认工程\\默认工程.cvsln\"",
-      "nativeDebugging": false,
+      "nativeDebugging": true,
       "hotReloadEnabled": true
     }
   }
