--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
 	<PropertyGroup>
+		<AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)ColorVision.snk</AssemblyOriginatorKeyFile>
 		<SignAssembly>True</SignAssembly>
-		<AssemblyOriginatorKeyFile>$(SolutionDir)ColorVision.snk</AssemblyOriginatorKeyFile>
 		<Platforms>x64;ARM64</Platforms>
 		<PackageTags>ColorVision</PackageTags>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
@@ -17,9 +17,13 @@
 		<AssemblyCompany>ColorVision Corp.</AssemblyCompany>
 		<AssemblyCopyright>Copyright (C) 2025 ColorVision Corporation</AssemblyCopyright>
 		<AssemblyProduct>ColorVision</AssemblyProduct>
-		<VersionPrefix>1.3.12.33</VersionPrefix>
 		<Company>ColorVision</Company>
 		<NeutralLanguage>zh-CN</NeutralLanguage>
 		<Authors>xincheng</Authors>
+		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<RepositoryUrl>https://github.com/xincheng213618/scgd_general_wpf</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
 </Project>  
