禁用程序集签名并添加新项目引用
在 `ColorVision.Core.csproj` 中禁用程序集签名，添加对 `opencv_helper.vcxproj` 的项目引用。
移除 `Directory.Build.props` 中的签名相关配置。
清理解决方案文件，删除对 `UI\Directory.Build.props` 的引用，并调整部分配置。

--- a/UI/ColorVision.Core/ColorVision.Core.csproj
+++ b/UI/ColorVision.Core/ColorVision.Core.csproj
@@ -12,6 +12,7 @@
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<SignAssembly>False</SignAssembly>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -55,6 +56,9 @@
 		  <Pack>true</Pack>
 		  <PackagePath>\</PackagePath>
 	  </None>
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\opencv_helper\opencv_helper.vcxproj" />
 	</ItemGroup>
 
 </Project>
