--- a/Plugins/ScreenRecorder/manifest.json
+++ b/Plugins/ScreenRecorder/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 1,
   "Id": "ScreenRecorder",
-  "name": "录像插件",
+  "name": "\u5f55\u50cf\u63d2\u4ef6",
   "version": "1.0",
   "description": "",
   "dllpath": "ScreenRecorder.dll",
-  "requires": "1.0.0.0"
-} 
+  "requires": "1.3.12.34"
+}
