--- a/ColorVision/Properties/launchSettings.json
+++ b/ColorVision/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ColorVision": {
       "commandName": "Project",
-      "commandLineArgs": "-r",
+      "commandLineArgs": "-i \"D:\\CVTest\\DEV.Camera.Default\\Data\\2025-10-10\\20251010T134434.7891864.cvraw\"",
       "nativeDebugging": false,
       "hotReloadEnabled": true
     }
