--- a/Projects/ProjectARVRPro/ProjectARVRPro.csproj
+++ b/Projects/ProjectARVRPro/ProjectARVRPro.csproj
@@ -34,7 +34,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="EditRecipeWindow.xaml.cs">
+	  <Compile Update="Recipe\EditRecipeWindow.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
 	  <Compile Update="Properties\Resources.Designer.cs">
@@ -62,7 +62,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Page Update="EditFixWindow.xaml">
+	  <Page Update="Fix\EditFixWindow.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
 	</ItemGroup>
