--- a/Projects/ProjectLUX/ProjectLUX.csproj
+++ b/Projects/ProjectLUX/ProjectLUX.csproj
@@ -47,6 +47,9 @@
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>Resources.resx</DependentUpon>
 	  </Compile>
+	  <Compile Update="Recipe\EditRecipeWindow.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
