--- a/Projects/ProjectLUX/ProjectLUX.csproj
+++ b/Projects/ProjectLUX/ProjectLUX.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.1.33</VersionPrefix>
+		<VersionPrefix>1.0.1.39</VersionPrefix>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -27,6 +27,7 @@
 
 	<ItemGroup>
 		<Folder Include="Assets\" />
+		<Folder Include="Process\AR\W51AR\" />
 		<Folder Include="Process\VR\" />
 	</ItemGroup>
 
