--- a/Engine/ColorVision.Engine/ColorVision.Engine.csproj
+++ b/Engine/ColorVision.Engine/ColorVision.Engine.csproj
@@ -178,6 +178,9 @@
     <None Update="Assets\Tool\EditJson\Editjson_files\UrlChangeTracker.js.下载">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Tool\SpectrAdj.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Tool\sscom5.13.1.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
