--- a/Plugins/EventVWR/EventVWR.csproj
+++ b/Plugins/EventVWR/EventVWR.csproj
@@ -17,6 +17,19 @@
 		<Compile Update="EventWindow.xaml.cs">
 			<SubType>Code</SubType>
 		</Compile>
+		<Compile Update="Properties\Resources.Designer.cs">
+		  <DependentUpon>Resources.resx</DependentUpon>
+		  <DesignTime>True</DesignTime>
+		  <AutoGen>True</AutoGen>
+		</Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <SubType>Designer</SubType>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	    <Generator>PublicResXFileCodeGenerator</Generator>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
