--- a/Projects/ProjectStarKey/ProjectStarKey.csproj
+++ b/Projects/ProjectStarKey/ProjectStarKey.csproj
@@ -4,9 +4,11 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows</TargetFramework>
 		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<VersionPrefix>1.0.3.1</VersionPrefix>
+		<VersionPrefix>1.0.3.3</VersionPrefix>
+		<UseWindowsForms>True</UseWindowsForms>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,6 +16,7 @@
 	  <None Remove="README.md" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\UI\ColorVision.ImageEditor\ColorVision.ImageEditor.csproj" />
 		<ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
 	</ItemGroup>
 
