--- a/Projects/ProjectStarKey/ProjectStarKey.csproj
+++ b/Projects/ProjectStarKey/ProjectStarKey.csproj
@@ -16,6 +16,7 @@
 	  <None Remove="README.md" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
 		<ProjectReference Include="..\..\UI\ColorVision.ImageEditor\ColorVision.ImageEditor.csproj" />
 		<ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
 	</ItemGroup>
