--- a/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
+++ b/UI/ColorVision.ImageEditor/ColorVision.ImageEditor.csproj
@@ -86,12 +86,11 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ColorVision.Common\ColorVision.Common.csproj" />
-		<!-- Windows 用本地工程引用（需要 C++ 环境） -->
-		<ProjectReference Include="..\ColorVision.Core\ColorVision.Core.csproj"
-						  Condition="'$(OS)' == 'Windows_NT'" />
+
+		<ProjectReference Include="..\ColorVision.Core\ColorVision.Core.csproj"/>
 
 		<!-- 非 Windows（如 Linux、macOS）用 NuGet 包 -->
-		<PackageReference Include="ColorVision.Core" Version="1.3.9.1" Condition="'$(OS)' != 'Windows_NT'" />
+		<!--<PackageReference Include="ColorVision.Core" Version="1.3.9.1" />-->
 		
 		<ProjectReference Include="..\ColorVision.Themes\ColorVision.Themes.csproj" />
 		<ProjectReference Include="..\ColorVision.UI\ColorVision.UI.csproj" />
