--- a/Test/opencv_helper_test/opencv_helper_test.vcxproj
+++ b/Test/opencv_helper_test/opencv_helper_test.vcxproj
@@ -143,9 +143,11 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CVFileUtil.cpp" />
     <ClCompile Include="opencv_helper_test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CVCIEFile.hpp" />
     <ClInclude Include="function.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
